Fix the width of the sidebar and get the wrapping behaviour

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -28,6 +28,7 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
 }
 
 .sidebar a {
@@ -38,10 +39,15 @@ body {
 .cards {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  margin: 10px;
+  padding: 5px;
+  width: 300px;
+  height: 400px;
 }
